--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,11 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favico.icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta name="description" content="An event planning application." />
+     <!-- Icon for desktop -->
+
+     <link rel="icon"  href="%PUBLIC_URL%/icon-192x192.png">
+     <link rel="icon" href="%PUBLIC_URL%/icon-512x512.png">
+
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
+    <link rel="android-chrome-512x512" href="%PUBLIC_URL%/android-chrome-512x512.png" />
+    <link rel="android-chrome-192x192" href="%PUBLIC_URL%/android-chrome-192x192.png" />
+
+
+    
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
